@@ -98,6 +98,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\SharedLibs\nhibernate\NHibernate.dll</HintPath>
     </Reference>
+    <Reference Include="Nullables, Version=1.0.2.0, Culture=neutral, PublicKeyToken=154fdcb44c4484fc">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\SharedLibs\nhibernate\Nullables.dll</HintPath>
+    </Reference>
     <Reference Include="NVelocity">
       <Name>NVelocity</Name>
       <HintPath>..\..\SharedLibs\nvelocity\NVelocity.dll</HintPath>
